--- a/Personal/templates/index.html
+++ b/Personal/templates/index.html
@@ -231,7 +231,7 @@
                         <h3>RedRock Technologies Ltd</h3>
                         <div class="ed">
                             <i class="far fa-calendar-alt"></i>
-                            <p style="font-size: 12px">July 2020 - September 2021</p>
+                            <p style="font-size: 12px">June 2020 - September 2021</p>
                         </div>
                         <div class="ed">
                             <i class="fas fa-map-marker-alt"></i>
@@ -258,7 +258,7 @@
                         <h3>MEDSOPH</h3>
                         <div class="ed">
                             <i class="far fa-calendar-alt"></i>
-                            <p style="font-size: 12px">January 2022 - Present</p>
+                            <p style="font-size: 12px">September 2021 - February 2023</p>
                         </div>
                         <div class="ed">
                             <i class="fas fa-map-marker-alt"></i>
@@ -270,7 +270,7 @@
                             <li>Project is still under development, although beta version for the laboratory which is a web app that stores test information, takes inventory of laboratory test kits and reagents, analyses and outputs data to dashboard, gives real time notification of items out of stock, sends test results to clients ......, has been pushed out and is currently undergoing client testing. PWA version of the laboratory app was also rolled out to enhance user experience. The doctor's forum and pharmaceutical aspects of the MEDSOPH health system is still in development (React / Redux).</li>
                         </ul>
                         <button>
-                            <a href="/medsoph">Git Repo</a>
+                            <a href="https://medsoph.kennedyc.me">Webpage</a>
                         </button>
                     </div>
                 </div>
@@ -283,7 +283,7 @@
                         <h3>Markie Stores</h3>
                         <div class="ed">
                             <i class="far fa-calendar-alt"></i>
-                            <p style="font-size: 12px">June 2022 - Present</p>
+                            <p style="font-size: 12px">March 2023 - August 2023</p>
                         </div>
                         <div class="ed">
                             <i class="fas fa-map-marker-alt"></i>
@@ -295,7 +295,7 @@
                             <li>Project is still under development, although beta versions has been pushed out and is currently undergoing client testing.</li>
                         </ul>
                         <button>
-                            <a href="/makkie">Git Repo</a>
+                            <a href="https://makkie.kennedyc.me">Webpage</a>
                         </button>
                     </div>
                 </div>
@@ -335,7 +335,7 @@
                             <li><span style="font-weight: 600">Tech Stack: </span>HTML, CSS, Vanilla JS, Python, Flask</li>
                         </ul>
                         <button>
-                            <a href="https://github.com/kennedyC2/Personal">Git Repo</a>
+                            <a href="https://kennedyc.me">View</a>
                         </button>
                     </div>
                 </div>
