--- a/Personal/templates/index.html
+++ b/Personal/templates/index.html
@@ -237,12 +237,12 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <p style="font-size: 12px">Imo State, Nigeria</p>
                         </div>
+
                         <ul>
-                            <li>Worked as a team leader and fullstack developer in the development and maintenance of RedRock Inventory Management System [RIMS]</li>
-                            <li>Developed accessible, responsive and functional user interface to allow visitors on any device to same same perfect user experience</li>
-                            <li>Developed and maintained Node.js based Rest API, with Paystack Payment integration and synchronization of data collected by the RIMS across network of customers</li>
-                            <li>Diagnosed and troubleshooted different websites of the company's important clients, by deploying updated knowledge of modern technologies and techniques in the industry</li>
-                            <li>Helped maintain code quality, organization and automation of other applications owned by the company</li>
+                            <li>Led a team as a full stack developer in the development and maintenance of the REDROCK Inventory Management System [RIMS].</li>
+                            <li>Designed and implemented a user interface that was accessible, responsive, and provided an exceptional user experience across all devices.</li>
+                            <li>Developed and managed a Rest API using Node.js, integrating PayStack payment gateway and ensuring seamless data synchronization across a network of clients for RIMS.</li>
+                            <li>Assisted in maintaining code quality, organization, and automation for other web applications owned by the company.</li>
                         </ul>
                         <button>
                             <a href="https://github.com/kennedyC2/RedRock-IMS">Git Repo</a>
@@ -264,10 +264,12 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <p style="font-size: 12px">Imo State, Nigeria</p>
                         </div>
+
                         <ul>
-                            <li>Developing a healthcare system / platform for online medical services, comprising of laboratories, pharmacies, doctor's forum / hub, using React while managing State through Redux.</li>
-                            <li>Also developing an API following RESTFUL standards to allow effective data processing, storage and access.</li>
-                            <li>Project is still under development, although beta version for the laboratory which is a web app that stores test information, takes inventory of laboratory test kits and reagents, analyses and outputs data to dashboard, gives real time notification of items out of stock, sends test results to clients ......, has been pushed out and is currently undergoing client testing. PWA version of the laboratory app was also rolled out to enhance user experience. The doctor's forum and pharmaceutical aspects of the MEDSOPH health system is still in development (React / Redux).</li>
+                            <li>Collaborated with a team of 5 developers and designers to successfully develop the company's cutting-edge online healthcare platform, enabling delivery of superior medical services to clients and patients.</li>
+                            <li>Employed object-oriented programming principles to create highly efficient and dependable web solutions tailored to meet the specific requirements of clients.</li>
+                            <li>Architected and executed robust database solutions, allowing for seamless data processing, storage, and prompt accessibility.</li>
+                            <li>Demonstrated proficiency in an extensive tech stack including HTML5, CSS, JavaScript, React + Redux, Node.js, and MongoDB.</li>
                         </ul>
                         <button>
                             <a href="https://medsoph.kennedyc.me">Webpage</a>
@@ -290,9 +292,10 @@
                             <p style="font-size: 12px">Imo State, Nigeria</p>
                         </div>
                         <ul>
-                            <li>Developing an E-commerce website for sales of medical Scrubs, Sneakers, Ward Coats, and accessories using React while managing State through Redux.</li>
-                            <li>Also developing an API following RESTFUL standards to allow effective data processing, storage and access.</li>
-                            <li>Project is still under development, although beta versions has been pushed out and is currently undergoing client testing.</li>
+                            <li>Designed and developed responsive web applications utilizing React.js + Redux, and Node.js, guaranteeing a superior user experience and compatibility across various browsers.</li>
+                            <li>Collaborated effectively with cross-functional teams to gather requirements, create detailed technical specifications, and implement scalable solutions for intricate business obstacles.</li>
+                            <li>Successfully integrated RESTful APIs and incorporated third-party services, including payment gateways and social media platforms, to optimize functionality and streamline user interactions.</li>
+                            <li>Conducted comprehensive testing and debugging to meticulously identify and resolve performance issues, resulting in the delivery of flawless code for seamless website performance.</li>
                         </ul>
                         <button>
                             <a href="https://makkie.kennedyc.me">Webpage</a>
@@ -312,9 +315,6 @@
                     <div>
                         <i class="fab fa-twitter-square"></i>
                     </div>
-                    <!-- <div>
-                        <i class="fab fa-instagram-square"></i>
-                    </div> -->
                     <div>
                         <i class="fab fa-whatsapp-square"></i>
                     </div>
