--- a/Personal/static/css/app.css
+++ b/Personal/static/css/app.css
@@ -625,6 +625,10 @@ footer > p {
         gap: 20px calc(20% / 4);
     }
 
+    .work ul li {
+        font-size: 12px;
+    }
+
     .md {
         width: 100%;
         height: 75%;
