--- a/makkie_fd/src/assets/css/app.css
+++ b/makkie_fd/src/assets/css/app.css
@@ -532,6 +532,7 @@ footer * {
 }
 
 .imgcont {
+    min-height: 220px;
     height: max-content;
     width: 100%;
     margin: auto;
@@ -539,9 +540,16 @@ footer * {
 
 .card {
     border: 0;
+    min-height: 350px;
     height: max-content;
     margin: 1rem 0 !important;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+}
+
+#trending .card,
+#newArrival .card {
+    min-height: 250px;
+    height: max-content;
 }
 
 .card-body {
@@ -1826,6 +1834,23 @@ footer * {
 
     .box_3 {
         width: 5%;
+    }
+
+    .imgcont {
+        min-height: 230px;
+        height: max-content;
+    }
+
+    .card {
+        justify-content: space-between !important;
+        min-height: 400px;
+        height: max-content;
+    }
+
+    #trending .card,
+    #newArrival .card {
+        min-height: 250px;
+        height: max-content;
     }
 }
 
