--- a/Personal/templates/index.html
+++ b/Personal/templates/index.html
@@ -50,10 +50,14 @@
                 </div>
                 <div class="rt">
                     <div>
-                        <i class="fab fa-github"></i>
+                        <a href="https://github.com/kennedyC2?tab=repositories">
+                            <i class="fab fa-github"></i>
+                        </a>
                     </div>
                     <div>
-                        <i class="fab fa-linkedin"></i>
+                        <a href="https://linkedin.com/in/kennedyc-244408123">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
                     </div>
                     <div>
                         <i class="fab fa-facebook-square"></i>
@@ -65,7 +69,9 @@
                         <i class="fab fa-instagram-square"></i>
                     </div> -->
                     <div>
-                        <i class="fab fa-whatsapp-square"></i>
+                        <a href="https://wa.me/+447831630144">
+                            <i class="fab fa-whatsapp-square"></i>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -231,14 +237,14 @@
                         <h3>RedRock Technologies Ltd</h3>
                         <div class="ed">
                             <i class="far fa-calendar-alt"></i>
-                            <p style="font-size: 12px">June 2020 - September 2021</p>
+                            <p style="font-size: 12px">June 2020 - October 2021</p>
                         </div>
                         <div class="ed">
                             <i class="fas fa-map-marker-alt"></i>
                             <p style="font-size: 12px">Imo State, Nigeria</p>
                         </div>
 
-                        <ul>
+                        <ul style="margin-bottom: 58px">
                             <li>Led a team as a full stack developer in the development and maintenance of the REDROCK Inventory Management System [RIMS].</li>
                             <li>Designed and implemented a user interface that was accessible, responsive, and provided an exceptional user experience across all devices.</li>
                             <li>Developed and managed a Rest API using Node.js, integrating PayStack payment gateway and ensuring seamless data synchronization across a network of clients for RIMS.</li>
@@ -258,21 +264,21 @@
                         <h3>MEDSOPH</h3>
                         <div class="ed">
                             <i class="far fa-calendar-alt"></i>
-                            <p style="font-size: 12px">September 2021 - February 2023</p>
+                            <p style="font-size: 12px">December 2021 - October 2022</p>
                         </div>
                         <div class="ed">
                             <i class="fas fa-map-marker-alt"></i>
                             <p style="font-size: 12px">Imo State, Nigeria</p>
                         </div>
 
-                        <ul>
+                        <ul style="margin-bottom: 58px">
                             <li>Collaborated with a team of 5 developers and designers to successfully develop the company's cutting-edge online healthcare platform, enabling delivery of superior medical services to clients and patients.</li>
                             <li>Employed object-oriented programming principles to create highly efficient and dependable web solutions tailored to meet the specific requirements of clients.</li>
                             <li>Architected and executed robust database solutions, allowing for seamless data processing, storage, and prompt accessibility.</li>
                             <li>Demonstrated proficiency in an extensive tech stack including HTML5, CSS, JavaScript, React + Redux, Node.js, and MongoDB.</li>
                         </ul>
                         <button>
-                            <a href="https://medsoph.kennedyc.me">Webpage</a>
+                            <a href="https://medsoph.kennedyc.me">Demo of Project</a>
                         </button>
                     </div>
                 </div>
@@ -285,7 +291,7 @@
                         <h3>Markie Stores</h3>
                         <div class="ed">
                             <i class="far fa-calendar-alt"></i>
-                            <p style="font-size: 12px">March 2023 - August 2023</p>
+                            <p style="font-size: 12px">March 2023 - November 2023</p>
                         </div>
                         <div class="ed">
                             <i class="fas fa-map-marker-alt"></i>
@@ -298,7 +304,7 @@
                             <li>Conducted comprehensive testing and debugging to meticulously identify and resolve performance issues, resulting in the delivery of flawless code for seamless website performance.</li>
                         </ul>
                         <button>
-                            <a href="https://makkie.kennedyc.me">Webpage</a>
+                            <a href="https://makkie.kennedyc.me">Demo of Project</a>
                         </button>
                     </div>
                 </div>
@@ -325,7 +331,7 @@
             <div class="md pgt closed" id="pgt">
                 <div class="lt">
                     <div class="title">
-                        <h2 style="font-family: Nunito Bold">Side Projects</h2>
+                        <h2 style="font-family: Nunito Bold">Projects</h2>
                     </div>
 
                     <div class="work">
@@ -347,8 +353,9 @@
                     <div class="work">
                         <h3>Arbitrage App</h3>
                         <ul>
-                            <li>A python app for calculating arbitrage opportunities, across multiple betting sites.</li>
-                            <li>Data is gotten by web scrapping, with the use of Selenium and BeautifulSoup python modules, ......</li>
+                            <li>A Python based web app that collects data by web scraping using Selenium and BeautifulSoup4 from multiple betting sites.</li>
+                            <li>Uses collected data to calculate Arbitrage opportunities, to increase profit and reduce losses.</li>
+                            <li><span style="font-weight: 600">Tech Stack: </span> HTML5, CSS, JavaScript, Flask, Python, Selenium, BeautifulSoup4.</li>
                         </ul>
                         <button>
                             <a href="https://github.com/kennedyC2/Arbitrage">Git Repo</a>
@@ -363,7 +370,9 @@
                     <div class="work">
                         <h3>Forex Trading App</h3>
                         <ul>
-                            <li>A python app for Forex trading, that connects to MT5, places a trade, monitors Stop Losses and Profit, closes unfavorable trades.</li>
+                            <li>A Python based web app that connects to MetaTrader 5, using the MT5 API documentation.</li>
+                            <li>App pulls 1yr worth of prices data, analyses it and picks prices with opportunities.</li>
+                            <li>Also, places trades with stop loss and take profit, tracks the market prices, and ends trade when not favourable.</li>
                             <li><span style="font-weight: 600">Tech Stack: </span>HTML, CSS, Vanilla JS, Python, Flask</li>
                         </ul>
                         <button>
